Adds views and widgets skeletons

--- a/src/meson.build
+++ b/src/meson.build
@@ -1,6 +1,12 @@
 src_files = [
   'main.cc',
-  'view/app_root.window.cc'
+  'view/app_content.panel.cc',
+  'view/app_root.window.cc',
+  'view/app_window_action_bar.panel.cc',
+  'view/content_action_bar.panel.cc',
+  'view/header_bar.panel.cc',
+  'view/navigation.panel.cc',
+  'widget/header_bar/header_bar.cc',
 ]
 
 dawki_lib = static_library(
