rename view to container_widget. adds css providers and initializer

--- a/src/meson.build
+++ b/src/meson.build
@@ -1,11 +1,20 @@
 src_files = [
+  'widget/header_bar/header_bar.cc',
+  'common/css_initializer.cc',
+  'common/css_source_provider.cc',
+  'container_widget/app_content.panel.cc',
+  'container_widget/app_root.window.cc',
+  'container_widget/app_window_action_bar.panel.cc',
+  'container_widget/content_action_bar.panel.cc',
+  'container_widget/header_bar.panel.cc',
+  'container_widget/navigation.panel.cc',
+  'container_widget/app_content.panel.cc',
+  'container_widget/app_root.window.cc',
+  'container_widget/app_window_action_bar.panel.cc',
+  'container_widget/content_action_bar.panel.cc',
+  'container_widget/header_bar.panel.cc',
+  'container_widget/navigation.panel.cc',
   'main.cc',
-  'view/app_content.panel.cc',
-  'view/app_root.window.cc',
-  'view/app_window_action_bar.panel.cc',
-  'view/content_action_bar.panel.cc',
-  'view/header_bar.panel.cc',
-  'view/navigation.panel.cc',
   'widget/header_bar/header_bar.cc',
 ]
 
