adds logging. adds css provider from file.

--- a/meson.build
+++ b/meson.build
@@ -13,11 +13,17 @@ project(
 
 cxx = meson.get_compiler('cpp')
 
-
 gtk_dep = dependency('gtkmm-4.0')
+thread_dep = dependency('threads')
+boost_dep = [
+    cxx.find_library('boost_thread'),
+    cxx.find_library('boost_log'),
+]
 
 dawki_deps = [
-  gtk_dep
+  gtk_dep,
+  thread_dep,
+  boost_dep
 ]
 
 
