adds skeleton for config json for gui

--- a/src/meson.build
+++ b/src/meson.build
@@ -1,6 +1,7 @@
 src_files = [
   'common/css_initializer.cc',
   'common/css_source_provider.cc',
+  'common/dawki_config_parser.cc',
   'container_widget/app_content.panel.cc',
   'container_widget/app_root.window.cc',
   'container_widget/app_window_action_bar.panel.cc',
