wires up gresources with meson

--- a/dawki_widgets_config.json
+++ b/dawki_widgets_config.json
@@ -19,6 +19,7 @@
       "style": {
         "node": "dawki-header-bar"
       },
+      "dragHandleIcon": "/assets/icons/drag.svg",
       "windowActionBar": {
         "name": "DawkiWindowActionBar",
         "style": {
