refactors box widgets

--- a/config/dawki_widgets_config.json
+++ b/config/dawki_widgets_config.json
@@ -2,7 +2,7 @@
   "app": {
     "domain": "in.suyashsingh",
     "style": {
-      "cssPath": "/assets/dawki.css"
+      "cssPath": "/assets/dawki.css", "node": "window","cssClass": "root"
     },
     "title": {
       "name": "Dawki",
