--- a/config/dawki_widgets_config.json
+++ b/config/dawki_widgets_config.json
@@ -2,7 +2,10 @@
   "app": {
     "domain": "in.suyashsingh",
     "style": {
-      "cssPath": "/assets/dawki.css", "node": "window","cssClass": "root"
+      "cssPath": "/assets/dawki.css",
+      "node": "window",
+      "cssClass": "root"
+
     },
     "title": {
       "name": "Dawki",
