--- a/config/dawki_widgets_config.json
+++ b/config/dawki_widgets_config.json
@@ -75,7 +75,7 @@
           }
         },
         "label": {
-          "name": "CONTAINERS",
+          "name": "containers",
           "style": {
             "cssClass": "docker-containers-nav-label"
           }
@@ -88,7 +88,7 @@
           }
         },
         "label": {
-          "name": "IMAGES",
+          "name": "images",
           "style": {
             "cssClass": "docker-containers-nav-label"
           }
