--- a/src/meson.build
+++ b/src/meson.build
@@ -1,12 +1,14 @@
 src_files = [
 'box_widget/containers/docker_containers_box.cc',
 'box_widget/root/app_content_box.cc',
+'box_widget/root/app_navigation_box.cc',
 'box_widget/root/app_root_window_box.cc',
 'box_widget/root/app_window_actions_box.cc',
-'box_widget/root/app_navigation_box.cc',
 'common/css_initializer.cc',
 'common/css_source_provider.cc',
 'common/dawki_config_parser.cc',
+'common/widgets/base_widget.cc',
+'common/widgets/button.cc',
 'logging/logging.cc',
 'main.cc',
 'widget/button/close.button.cc',
