--- a/src/meson.build
+++ b/src/meson.build
@@ -12,7 +12,11 @@ src_files = [
 'widget/box/app_root/app_navigation_items_box.cc',
 'widget/box/app_root/app_root_box.cc',
 'widget/box/app_root/app_root_window.cc',
+'widget/box/app_root/app_window_actions_box.cc',
 'widget/box/docker_containers/docker_containers_box.cc',
+'widget/button/close.button.cc',
+'widget/button/maximize.button.cc',
+'widget/button/minimize.button.cc',
 ]
 
 dawki_lib = static_library(
