setups dawki store for window width change event

--- a/src/meson.build
+++ b/src/meson.build
@@ -4,6 +4,7 @@ src_files = [
 'css/css_source_provider.cc',
 'logging/logging.cc',
 'main.cc',
+'store/dawki_store.cc',
 'widget/base/widget.cc',
 'widget/box/app_root/app_content_box.cc',
 'widget/box/app_root/app_content_header_box.cc',
