--- a/src/config/dawki_widgets_config.json
+++ b/src/config/dawki_widgets_config.json
@@ -1,33 +1,38 @@
 {
   "app": {
-    "name": "main-window",
+    "id": "main-window",
     "domain": "in.suyashsingh",
     "style": {
       "cssPath": "/assets/dawki.css"
     },
     "root": {
-      "name": "root-box",
+      "id": "root-box",
       "navigation": {
-        "name": "navigation-box",
-        "header": { "name": "navigation-header",
+        "id": "navigation-box",
+        "header": {
+          "id": "navigation-header",
           "windowActions": {
-            "name": "window-actions",
+            "id": "window-actions",
             "close": {
-              "name": "win-close-btn-md"
+              "id": "win-close-btn-md"
             },
             "minimize": {
-              "name": "win-min-btn-md"
+              "id": "win-min-btn-md"
             },
             "maximize": {
-              "name": "win-max-btn-md"
+              "id": "win-max-btn-md"
             }
           }
         },
-        "items": {"name": "navigation-items"}
+        "items": {
+          "id": "navigation-items"
+        }
       },
       "content": {
-        "name": "content-box",
-        "header": { "name": "content-header" }
+        "id": "content-box",
+        "header": {
+          "id": "content-header"
+        }
       }
     }
   }
