--- a/src/config/dawki_config.json
+++ b/src/config/dawki_config.json
@@ -6,8 +6,9 @@
       "cssPath": "/assets/dawki.css"
     },
     "config": {
+      "dir": "$HOME/.config/dawki/",
       "ui": {
-        "filePath" : "~/.config/dawki/ui.json"
+        "filename" : "ui.json"
       }
     }, 
     "root": {
